[gd_scene load_steps=6 format=3 uid="uid://ftg1igtjh1fe"]

[ext_resource type="Script" uid="uid://bg5juk44yav8u" path="res://scripts/popup_score.gd" id="1_d0arr"]
[ext_resource type="Texture2D" uid="uid://cse43ltj0f0cv" path="res://assets/sprites/button_score.png" id="1_tauwg"]
[ext_resource type="LabelSettings" uid="uid://di7nscev3345u" path="res://assets/fonts/button_font.tres" id="2_exvef"]
[ext_resource type="Texture2D" uid="uid://dlrbuggr0t3a6" path="res://assets/sprites/button_throw_pressed.png" id="2_ka76i"]
[ext_resource type="Texture2D" uid="uid://da62re3dnon2g" path="res://assets/sprites/button_keep.png" id="3_ka76i"]

[node name="popup_score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0arr")

[node name="Dyams_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 16.0
offset_right = 165.0
offset_bottom = 30.0
texture_normal = ExtResource("1_tauwg")
texture_disabled = ExtResource("2_ka76i")

[node name="Dyams_Label" type="Label" parent="Dyams_Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 25.0
offset_bottom = 13.0
text = "Dyams"
label_settings = ExtResource("2_exvef")

[node name="Fourkind_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 38.0
offset_right = 133.0
offset_bottom = 52.0
texture_normal = ExtResource("3_ka76i")
texture_disabled = ExtResource("2_ka76i")

[node name="4kind_Label" type="Label" parent="Fourkind_Button"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 22.0
offset_bottom = 13.0
text = "4kind"
label_settings = ExtResource("2_exvef")

[node name="FullHouse_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 38.0
offset_right = 165.0
offset_bottom = 52.0
texture_normal = ExtResource("1_tauwg")
texture_disabled = ExtResource("2_ka76i")

[node name="FullHouse_Label" type="Label" parent="FullHouse_Button"]
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 22.0
offset_bottom = 14.0
text = "FullH"
label_settings = ExtResource("2_exvef")

[node name="LargeS_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 38.0
offset_right = 197.0
offset_bottom = 52.0
texture_normal = ExtResource("3_ka76i")
texture_disabled = ExtResource("2_ka76i")

[node name="LargeS_Label" type="Label" parent="LargeS_Button"]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 27.0
offset_bottom = 13.0
text = "Large S"
label_settings = ExtResource("2_exvef")

[node name="SmallS_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 54.0
offset_right = 133.0
offset_bottom = 68.0
texture_normal = ExtResource("1_tauwg")
texture_disabled = ExtResource("2_ka76i")

[node name="SmallS_Label" type="Label" parent="SmallS_Button"]
layout_mode = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 14.0
text = "Small S"
label_settings = ExtResource("2_exvef")

[node name="Threekind_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 54.0
offset_right = 165.0
offset_bottom = 68.0
texture_normal = ExtResource("3_ka76i")
texture_disabled = ExtResource("2_ka76i")

[node name="3kind_Label" type="Label" parent="Threekind_Button"]
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 22.0
offset_bottom = 14.0
text = "3kind"
label_settings = ExtResource("2_exvef")

[node name="TwoPairs_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 54.0
offset_right = 197.0
offset_bottom = 68.0
texture_normal = ExtResource("1_tauwg")
texture_disabled = ExtResource("2_ka76i")

[node name="2Pairs_Label" type="Label" parent="TwoPairs_Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 24.0
offset_bottom = 14.0
text = "2Pairs"
label_settings = ExtResource("2_exvef")

[node name="Pair_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 70.0
offset_right = 148.0
offset_bottom = 84.0
texture_normal = ExtResource("3_ka76i")
texture_disabled = ExtResource("2_ka76i")

[node name="Pair_Label" type="Label" parent="Pair_Button"]
layout_mode = 0
offset_left = 9.0
offset_top = 4.0
offset_right = 21.0
offset_bottom = 13.0
text = "Pair"
label_settings = ExtResource("2_exvef")

[node name="Chance_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 70.0
offset_right = 181.0
offset_bottom = 84.0
texture_normal = ExtResource("1_tauwg")
texture_disabled = ExtResource("2_ka76i")

[node name="Chance_Label" type="Label" parent="Chance_Button"]
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 14.0
text = "Chance"
label_settings = ExtResource("2_exvef")

[connection signal="button_up" from="Dyams_Button" to="." method="_on_dyams_button_button_up"]
[connection signal="button_up" from="Fourkind_Button" to="." method="_on_fourkind_button_button_up"]
[connection signal="button_up" from="FullHouse_Button" to="." method="_on_full_house_button_button_up"]
[connection signal="button_up" from="LargeS_Button" to="." method="_on_large_s_button_button_up"]
[connection signal="button_up" from="SmallS_Button" to="." method="_on_small_s_button_button_up"]
[connection signal="button_up" from="Threekind_Button" to="." method="_on_threekind_button_button_up"]
[connection signal="button_up" from="TwoPairs_Button" to="." method="_on_two_pairs_button_button_up"]
[connection signal="button_up" from="Pair_Button" to="." method="_on_pair_button_button_up"]
[connection signal="button_up" from="Chance_Button" to="." method="_on_chance_button_button_up"]
